# price-loom

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  postgres-language-server.jsonc  rustfmt.toml
.zed/: settings.json
docs/: bhavcopy-legacy-format.xlsx  bhavcopy-udiff-format.xlsx
migrations/: 20260406135203_initialise.sql
src/: bhav.rs  bhav_nse.rs  main.rs  types.rs
src/adapters/: bhav.rs  mod.rs  store.rs
src/domain/: instrument.rs  mod.rs  price.rs  source_file.rs
src/services/: bhav.rs  mod.rs
src/services/bhav/: mod.rs  nse.rs
src/shared/: config.rs  database.rs  error.rs  mod.rs  storage.rs
