[package]
name = "price-loom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json", "macros"] }
chrono ={ version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
tokio = { version = "1.51.0",  features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
zip = "8.1.0"
object_store = "0.13.2"
url = "2.5.8"
bytes = "1.11.1"
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
sqlx = { version = "0.8.6", features = ["default", "postgres", "chrono", "runtime-tokio"] }
