[package]
name = "price-loom"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["json", "macros"] }
bytes = "1.11.1"
chrono ={ version = "0.4.43", features = ["serde"] }
csv = "1.4.0"
dotenvy = "0.15.7"
object_store = "0.13.2"
ordered-float = { version = "5.3.0", features = ["std", "serde"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde-env = "0.2.0"
serde_json = "1.0"
serde_with = { version = "3.18.0", features = ["chrono_0_4"] }
sha2 = "0.11.0"
strum = { version = "0.28", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["default", "postgres", "chrono", "runtime-tokio", "uuid"] }
tokio = { version = "1.51.0",  features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
uuid = "1.23.0"
wincode = { version = "0.5.2", features = ["derive"] }
zip = "8.1.0"
